--- a/style.css
+++ b/style.css
@@ -3,10 +3,32 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+#main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 #wrapper {
+  width: 100vw;
   margin: 2rem auto;
   width: 85vw;
   text-align: center;
+
+  
+}
+
+h1{
+  font-size: 3rem;
+  background-color: rgba(165, 42, 42, 0.593);
+  padding: 10px 0px;
+  border-radius: 10px;
+  text-align: center;
+  width: 100vw;
+  position: sticky;
+  top: 0px;
 }
 #img-container {
   display: flex;
@@ -17,12 +39,9 @@
 }
 #img-container a {
   display: inline-block;
-  /* width: 31%; */
-  /* height: 300px; */
 }
 #img-container img {
-  width: 200px;
-  height: 150px;
+  width: 45vw;
   object-fit: cover;
 }
 #loader {
